--- a/css/main.css
+++ b/css/main.css
@@ -95,21 +95,22 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.header_container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 50px;
+	border-bottom: #ccc;
+	background-color: #f4f4f4;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.header_content {
+	position: absolute;
+	height: 40px;
+	margin: 5px;
+	background-color: #f0f0f0;
+}
 
 /* ==========================================================================
    Helper classes
