--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ textarea {
 	left: 0;
 	width: 100%;
 	height: 50px;
-	border-bottom: #ccc;
+	border-bottom: solid 1px #ccc;
 	background-color: #f4f4f4;
 }
 
@@ -109,7 +109,10 @@ textarea {
 	position: absolute;
 	height: 40px;
 	margin: 5px;
-	background-color: #f0f0f0;
+}
+
+.header_link {
+	
 }
 
 /* ==========================================================================
