--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,12 @@ textarea {
 	height: 40px;
 	line-height: 40px;
 	margin: 0 10px 0 0;
+	padding: 0 10px 0 0;
+	border-right: solid 1px #ccc;
+}
+
+.header_link:hover {
+	cursor: pointer;
 }
 
 /* ==========================================================================
