--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -282,20 +282,22 @@ footer {
 	line-height: 30px;
 	font-size: 1.2em;
 	float: left;
+	color: #333;
 }
 
 .site_tagline {
 	width: 100%;
-	background-color: #333;
-	height: 20px;
-	line-height: 20px;
+	background-color: #f4f4f4;
+	height: 30px;
+	line-height: 30px;
 	border-radius: 5px; 
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px;
 	border: 1px solid #e5e5e5;
-	color: #fff;
+	margin: 0 0 10px 0;
 }
 
 .site_tagline_txt {
 	padding: 0 0 0 10px;
+	color: #333;
 }
