--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -257,7 +257,7 @@ footer {
 .site_user {
 	width: 100%;
 	background-color: #f4f4f4;
-	height: 40px;
+	height: 50px;
 	border-radius: 5px; 
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px; 
@@ -270,22 +270,31 @@ footer {
 	background-image: url(/images/djtaylor_30x30.png);
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
-	width: 30px;
-	height: 30px;
+	width: 40px;
+	height: 40px;
 	padding: 5px;
 	float: left;
 }
 
 .site_user_txt {
 	padding: 5px;
-	height: 30px;
-	line-height: 30px;
-	font-size: 1.2em;
+	height: 40px;
 	float: left;
 	color: #333;
+	overflow: auto;
 }
 
-.site_tagline {
+.site_user_name {
+	font-size: 1.2em;
+	border-bottom: solid 1px #e5e5e5;
+	height: 20px;
+}
+
+.site_user_tagline {
+	height: 20px;
+}
+
+.site_github_profile {
 	width: 100%;
 	background-color: #f4f4f4;
 	height: 30px;
@@ -297,7 +306,6 @@ footer {
 	margin: 0 0 10px 0;
 }
 
-.site_tagline_txt {
+.site_github_profile_txt {
 	padding: 0 0 0 10px;
-	color: #333;
 }
