--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -254,14 +254,17 @@ footer {
   }
 }
 
-.site_user {
-	width: 100%;
+.site_block_1 {
 	background-color: #f4f4f4;
-	height: 74px;
 	border-radius: 5px; 
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px; 
 	border: 1px solid #e5e5e5;
+}
+
+.site_user {
+	width: 100%;
+	height: 74px;
 	margin: 0 0 10px 0;
 	overflow: auto;
 }
@@ -299,16 +302,21 @@ footer {
 
 .site_github_profile {
 	width: 100%;
-	background-color: #f4f4f4;
 	height: 30px;
 	line-height: 30px;
-	border-radius: 5px; 
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 5px;
-	border: 1px solid #e5e5e5;
 	margin: 0 0 10px 0;
 }
 
 .site_github_profile_txt {
 	padding: 0 0 0 10px;
+}
+
+.site_nav {
+	
+}
+
+.site_nav_item {
+	height: 20px;
+	line-height: 20px;
+	border-bottom: solid 1px #e5e5e5;
 }
