--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -260,10 +260,10 @@ footer {
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px; 
 	border: 1px solid #e5e5e5;
+	width: 100%;
 }
 
 .site_user {
-	width: 100%;
 	height: 74px;
 	margin: 0 0 10px 0;
 	overflow: auto;
@@ -301,7 +301,6 @@ footer {
 }
 
 .site_github_profile {
-	width: 100%;
 	height: 30px;
 	line-height: 30px;
 	margin: 0 0 10px 0;
@@ -319,4 +318,11 @@ footer {
 	height: 20px;
 	line-height: 20px;
 	border-bottom: solid 1px #e5e5e5;
+	margin: 5px;
+	padding: 0 0 5px 0;
+}
+
+.site_nav_item:hover {
+	font-weight: bold;
+	cursor: pointer;
 }
