--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -319,7 +319,8 @@ footer {
 	line-height: 20px;
 	border-bottom: solid 1px #e5e5e5;
 	margin: 5px;
-	padding: 0 0 5px 0;
+	padding: 0 0 5px 5px;
+	font-size: 1.2em;
 }
 
 .site_nav_item:hover {
