--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,6 +7,12 @@ body {
   font-weight:300;
 }
 
+html {
+	background-image: url(/images/bg/doubtful_sound.jpg);
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
